# PHASE_2

./: .gitignore  example.env  pyproject.toml
configs/: deepagent_baseline.example.yaml  react_baseline.example.yaml
scripts/: analyze_benchmark_run.py  enforce_benchmark_analysis_hook.py  run_and_analyze.sh  run_benchmark_with_analysis.py  run_task_with_analysis.py  visualize_trace.py
src/data_agent_baseline/: cli.py  config.py
src/data_agent_baseline/agents/: __init__.py  deep_agent.py  deep_state.py  filesystem.py  knowledge_schema.py  middleware.py  model.py  prompt.py  prompts.py  question_structure.py  react.py  runtime.py  semantic_layer.py  tracing.py
src/data_agent_baseline/benchmark/: context.py  dataset.py
src/data_agent_baseline/evidence_agent/: __init__.py  controller.py  knowledge.py  semantic.py  text.py  tracing.py
src/data_agent_baseline/prompts/: __init__.py  loader.py  main_agent.md  subagent.md  task.md
src/data_agent_baseline/run/: runner.py
src/data_agent_baseline/tools/: __init__.py  _helpers.py  analyze_plan.py  answer.py  execute_python.py  execute_sql.py  grep_file.py  inspect_sqlite.py  list_context.py  list_videos.py  observed_sources.py  plan_contract.py  query_schema.py  read_csv.py  read_doc.py  read_json.py
tests/: test_answer_contract.py  test_architecture_improvements.py  test_deep_agent.py  test_document_agent.py  test_document_slice_tools.py  test_knowledge_catalog_navigation.py  test_runner_outputs.py
tmp_test_trace/task_1/context/: knowledge.md  records.csv
tmpy/context/: records.csv
(+47 files in other folders)
